--- a/src/ui/header/header.module.scss
+++ b/src/ui/header/header.module.scss
@@ -2,5 +2,7 @@
 @use "../../styles/variables" as *;
 
 .header{
-    padding: 2.25rem 1.5rem;
+    padding: 2.1875rem 1.5rem 1.8125rem;
+    display: flex;
+    justify-content: space-between;
 }
