partial; add toggle functionality without design

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,3 +12,11 @@ button{
     border: none;
     background-color: inherit;
 }
+
+a{
+    text-decoration: none;
+}
+
+ul{
+    list-style: none;
+}
