--- a/src/ui/navigation/navigation.module.scss
+++ b/src/ui/navigation/navigation.module.scss
@@ -1,2 +1,17 @@
 @use "../../styles/mixins" as *;
 @use "../../styles/variables" as *;
+
+.nav{
+
+    &__links{
+        display: none;
+        position: absolute;
+        width: 100vw;
+        left: 0;
+        top: 100%;
+
+        &--show{
+            display: block;
+        }
+    }
+}
