--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -10,28 +10,40 @@
     }
 }
 
-@mixin heading-l{
+@mixin heading-4{
     font-size: 3rem;
     font-weight: 500;
     line-height: 1;
 }
 
-@mixin heading-m{
+@mixin heading-3{
     font-size: 2.5rem;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 2px;
 }
 
-@mixin heading-s{
+@mixin heading-2{
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1.125;
+}
+
+@mixin heading-1{
     font-size: 1.25rem;
     font-weight: 500;
     line-height: 1.3;
     letter-spacing: 5px;
 }
 
-@mixin body{
+@mixin body-2{
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.625;
+}
+
+@mixin body-1{
+    font-size: 0.9375rem;
+    font-weight: 400;
+    line-height: 1.66667;
 }
