--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -98,3 +98,50 @@
         }
     }
 }
+
+.characters{
+    margin: 7.5rem 0 19.4375rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 5rem;
+
+    &__background{
+        background-image: url("../../public/shared/desktop/bg-pattern-small-circle.svg");
+        background-repeat: no-repeat;
+        background-position: center;
+
+        &--270{
+            transform: rotate(-90deg);
+
+            & > *{
+                transform: rotate(90deg);
+            }
+        }
+
+        &--90{
+            transform: rotate(90deg);
+
+            & > *{
+                transform: rotate(-90deg);
+            }
+        }
+    }
+
+    &__item{
+        text-align: center;
+    }
+
+    &__title{
+        margin-top: 3rem;
+        font-size: 1.25rem;
+        font-weight: 500;
+        line-height: 1.3;
+        letter-spacing: 5px;
+    }
+
+    &__description{
+        @include body-2;
+        margin: 2rem auto 0;
+        width: 87.2%;
+    }
+}
