--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,6 +2,8 @@
 @use "../styles/variables" as *;
 
 .home{
+    position: relative;
+    padding-bottom: 19.4375rem;
 
     &__hero{
         background-color: #E7816B;
@@ -100,7 +102,7 @@
 }
 
 .characters{
-    margin: 7.5rem 0 19.4375rem;
+    margin: 7.5rem 0 0;
     display: flex;
     flex-direction: column;
     row-gap: 5rem;
