--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -82,10 +82,14 @@
     &__item{
         width: 87.2%;
         margin: auto;
+
+        @include tablet{
+            width: 90%;
+        }
     }
 
     &__link{
-        padding: 5.625rem 3.5rem;
+        padding: 5.625rem 0;
         text-align: center;
         color: $white;
         border-radius: 0.9375rem;
@@ -94,24 +98,44 @@
         background-position: center;
         background-size: cover;
 
+        @include tablet{
+            padding: 3.3125rem 0;
+        }
+
         &--web{
             background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/mobile/image-web-design.jpg");
+
+            @include tablet{
+                background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-web-design.jpg");
+            }
         }
 
         &--app{
             background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/mobile/image-app-design.jpg");
+
+            @include tablet{
+                background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-app-design.jpg");
+            }
         }
 
         &--graphic{
             background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/mobile/image-graphic-design.jpg");
+
+            @include tablet{
+                background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-graphic-design.jpg");
+            }
         }
     }
 
-    &__titles{
+    &__title{
         font-size: 1.75rem;
         font-weight: 500;
         letter-spacing: 1.4px;
         line-height: 1.28571;
+
+        @include tablet{
+            @include heading-3;
+        }
     }
 
     &__sub{
@@ -134,11 +158,16 @@
     display: flex;
     flex-direction: column;
     row-gap: 5rem;
+    max-width: 100%;
 
     &__background{
         background-image: url("../../public/shared/desktop/bg-pattern-small-circle.svg");
         background-repeat: no-repeat;
         background-position: center;
+
+        @include tablet{
+            width: fit-content;
+        }
 
         &--270{
             transform: rotate(-90deg);
@@ -159,19 +188,33 @@
 
     &__item{
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+
+        @include tablet{
+            max-height: 13rem;
+            width: 90%;
+            margin: auto;
+            text-align: left;
+            column-gap: 3rem;
+            row-gap: 1rem;
+        }
     }
 
     &__title{
-        margin-top: 3rem;
-        font-size: 1.25rem;
-        font-weight: 500;
-        line-height: 1.3;
-        letter-spacing: 5px;
+        @include heading-1;
+        margin-top: 2.5625rem;
     }
 
     &__description{
         @include body-2;
         margin: 2rem auto 0;
         width: 87.2%;
+
+        @include tablet{
+            max-width: 63.71553%;
+            margin: 0;
+        }
     }
 }
