--- a/src/ui/call-to-action/call-to-action.module.scss
+++ b/src/ui/call-to-action/call-to-action.module.scss
@@ -18,13 +18,33 @@
     background-position: right center;
     background-repeat: no-repeat;
 
+    @include tablet{
+        width: 90%;
+        bottom: -5.375rem;
+        padding: 3.5625rem 0;
+    }
+
     &__header{
         @include heading-2;
+
+        @include tablet{
+            @include heading-3;
+            max-width: 20.9375rem;
+            margin: auto;
+        }
     }
 
     &__paragraph{
         @include body-1;
         margin-top: 0.375rem;
+
+        @include tablet{
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.625;
+            margin: 0.875rem auto 0;
+            max-width: 28rem;
+        }
     }
 
     &__call{
