fix background on hero

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,7 +9,7 @@
         background-color: #E7816B;
         padding-top: 5rem;
         background-image: url("../../public/shared/desktop/bg-pattern-small-circle.svg");
-        background-position: left;
+        background-position: clamp(0rem, -10.138rem + 43.257vi, 10.625rem);
         background-repeat: no-repeat;
         background-size: 640px 640px;
 
