--- a/src/ui/call-to-action/call-to-action.module.scss
+++ b/src/ui/call-to-action/call-to-action.module.scss
@@ -14,8 +14,8 @@
     left: 50%;
     transform: translateX(-50%);
     background-image: url("../../../public/shared/desktop/bg-pattern-call-to-action.svg");
-    background-size: 250%;
-    background-position: right center;
+    background-size: 876px 584px;
+    background-position: 40% 50%;
     background-repeat: no-repeat;
 
     @include tablet{
