--- a/src/ui/footer/footer.module.scss
+++ b/src/ui/footer/footer.module.scss
@@ -16,6 +16,14 @@
         border-bottom: 1px solid #FFFFFF1E;
         padding-bottom: 2rem;
         position: relative;
+
+        @include tablet{
+            width: 90%;
+            position: static;
+            display: flex;
+            justify-content: space-between;
+            padding: bo 2.5rem;
+        }
     }
 
     &__links{
@@ -23,6 +31,14 @@
         position: absolute;
         width: 100%;
         top: 100%;
+
+        @include tablet{
+            position: static;
+            display: flex;
+            width: fit-content;
+            padding: 0;
+            column-gap: 2.625rem;
+        }
     }
 
     &__link{
@@ -32,6 +48,10 @@
         letter-spacing: 2px;
         color: $white;
         padding: 1rem 0;
+
+        @include tablet{
+            padding: 0;
+        }
     }
 
     &__bottom{
@@ -40,10 +60,21 @@
         margin-top: 11.125rem;
         text-align: center;
         font-style: normal;
+
+        @include tablet{
+            margin: 2rem auto 0;
+            display: flex;
+            width: 90%;
+            justify-content: space-between;
+        }
     }
 
     &__contact{
         margin-top: 2.5rem;
+
+        @include tablet{
+            margin-top: 0;
+        }
     }
 
     &__socials{
@@ -51,5 +82,10 @@
         display: flex;
         justify-content: center;
         column-gap: 1rem;
+
+        @include tablet{
+            margin: 0;
+            align-items: flex-end;
+        }
     }
 }
