--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -113,12 +113,28 @@
     flex-direction: column;
     row-gap: 1.5rem;
 
+    @include desktop{
+        margin: 10rem auto 0;
+        height: 40rem;
+        width: 69.4375rem;
+        flex-wrap: wrap;
+    }
+
     &__item{
         width: 87.2%;
         margin: auto;
 
         @include tablet{
-            width: 90%;
+            max-width: 69.4375rem;
+        }
+
+        @include desktop{
+            width: fit-content;
+            margin: 0;
+            
+            &:not(:first-of-type){
+                margin-left: auto;
+            }
         }
     }
 
@@ -136,11 +152,28 @@
             padding: 3.3125rem 0;
         }
 
+        @include desktop{
+            padding: 0;
+            width: 33.8125rem;
+            height: 19.25rem;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            align-content: center;
+            justify-content: center;
+            column-gap: 1.5rem;
+        }
+
         &--web{
             background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/mobile/image-web-design.jpg");
 
             @include tablet{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-web-design.jpg");
+            }
+
+            @include desktop{
+                background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/desktop/image-web-design-large.jpg");
+                height: 40rem;
             }
         }
 
@@ -150,6 +183,10 @@
             @include tablet{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-app-design.jpg");
             }
+
+            @include desktop{
+                background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/desktop/image-app-design.jpg");
+            }
         }
 
         &--graphic{
@@ -157,6 +194,10 @@
 
             @include tablet{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-graphic-design.jpg");
+            }
+
+            @include desktop{
+                background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/desktop/image-graphic-design.jpg");
             }
         }
     }
@@ -169,6 +210,10 @@
 
         @include tablet{
             @include heading-3;
+        }
+
+        @include desktop{
+            width: 100%;
         }
     }
 
