--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -5,6 +5,10 @@
     position: relative;
     padding-bottom: 19.4375rem;
 
+    @include tablet{
+        padding-bottom: 20.6875rem;
+    }
+
     &__hero{
         background-color: #E7816B;
         padding-top: 5rem;
@@ -233,11 +237,17 @@
 }
 
 .characters{
-    margin: 7.5rem 0 0;
+    margin: 7.5rem auto 0;
     display: flex;
     flex-direction: column;
     row-gap: 5rem;
-    max-width: 100%;
+    max-width: 69.4375rem;
+
+    @include desktop{
+        margin-top: 10rem;
+        flex-direction: row;
+        justify-content: space-between;
+    }
 
     &__background{
         background-image: url("../../public/shared/desktop/bg-pattern-small-circle.svg");
@@ -246,6 +256,10 @@
 
         @include tablet{
             width: fit-content;
+        }
+
+        @include desktop{
+            margin: auto;
         }
 
         &--270{
@@ -273,11 +287,18 @@
 
         @include tablet{
             max-height: 13rem;
-            width: 90%;
             margin: auto;
             text-align: left;
             column-gap: 3rem;
             row-gap: 1rem;
+        }
+
+        @include desktop{
+            display: block;
+            max-height: none;
+            text-align: center;
+            width: 21.875rem;
+            margin: 0;
         }
     }
 
@@ -294,6 +315,11 @@
         @include tablet{
             max-width: 63.71553%;
             margin: 0;
+        }
+
+        @include desktop{
+            max-width: none;
+            width: 100%;
         }
     }
 }
