finish design of home in all queries

--- a/src/ui/call-to-action/call-to-action.module.scss
+++ b/src/ui/call-to-action/call-to-action.module.scss
@@ -30,6 +30,7 @@
         width: 69.4375rem;
         padding: 4.5rem 5.9375rem;
         text-align: left;
+        bottom: -4.5rem;
     }
 
     &__header{
