--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -175,37 +175,73 @@
         &--web{
             background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/mobile/image-web-design.jpg");
 
+            &:hover{
+                background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/mobile/image-web-design.jpg");
+            }
+
             @include tablet{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-web-design.jpg");
+
+                &:hover{
+                    background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/tablet/image-web-design.jpg");
+                }
             }
 
             @include desktop{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/desktop/image-web-design-large.jpg");
                 height: 40rem;
+
+                &:hover{
+                    background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/desktop/image-web-design-large.jpg");
+                }
             }
         }
 
         &--app{
             background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/mobile/image-app-design.jpg");
 
+            &:hover{
+                background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/mobile/image-app-design.jpg");
+            }
+
             @include tablet{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-app-design.jpg");
+
+                &:hover{
+                    background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/tablet/image-app-design.jpg");
+                }
             }
 
             @include desktop{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/desktop/image-app-design.jpg");
+
+                &:hover{
+                    background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/desktop/image-app-design.jpg");
+                }
             }
         }
 
         &--graphic{
             background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/mobile/image-graphic-design.jpg");
 
+            &:hover{
+                background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/mobile/image-graphic-design.jpg");
+            }
+
             @include tablet{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/tablet/image-graphic-design.jpg");
+
+                &:hover{
+                    background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/tablet/image-graphic-design.jpg");
+                }
             }
 
             @include desktop{
                 background-image: linear-gradient(0deg, #00000099, #00000099), url("../../public/home/desktop/image-graphic-design.jpg");
+
+                &:hover{
+                    background-image: linear-gradient(0deg, #E7816B99, #E7816B99),  url("../../public/home/desktop/image-graphic-design.jpg");
+                }
             }
         }
     }
