--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,6 +4,9 @@
 .home{
     position: relative;
     padding-bottom: 19.4375rem;
+    background-image: url("../../public/shared/desktop/bg-pattern-leaf.svg");
+    background-repeat: no-repeat;
+    background-position: 0% 20rem;
 
     @include tablet{
         padding-bottom: 20.6875rem;
@@ -11,6 +14,18 @@
 
     @include desktop{
         padding-bottom: 23.75rem;
+
+        &::before{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-image: url("../../public/shared/desktop/bg-pattern-leaf.svg");
+            background-repeat: no-repeat;
+            transform: rotateZ(180deg);
+            background-position: 0% 4.625rem;
+            z-index: 0;
+        }
     }
 
     &__hero{
@@ -291,6 +306,8 @@
         margin-top: 10rem;
         flex-direction: row;
         justify-content: space-between;
+        position: relative;
+        z-index: 1;
     }
 
     &__background{
