--- a/src/ui/card/card.module.scss
+++ b/src/ui/card/card.module.scss
@@ -14,12 +14,23 @@
         display: flex;
     }
 
+    @include desktop{
+        width: 21.875rem;
+        display: block;
+        margin: 0;
+    }
+
     &__first{
         height: 20rem;
 
         @include tablet{
             width: 21.1875rem;
             height: 19.375rem;
+        }
+
+        @include desktop{
+            width: 100%;
+            height: 20rem;
         }
     }
 
@@ -29,6 +40,10 @@
 
         @include tablet{
             border-radius: 0.9375rem 0 0 0.9375rem;
+        }
+
+        @include desktop{
+            border-radius: 0.9375rem 0.9375rem 0 0;
         }
     }
 
@@ -44,6 +59,10 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+        }
+
+        @include desktop{
+            border-radius: 0 0 0.9375rem 0.9375rem;
         }
     }
 
