--- a/src/app/designs/graphic/page.module.scss
+++ b/src/app/designs/graphic/page.module.scss
@@ -4,4 +4,34 @@
 .web{
     position: relative;
     padding: 0 0 17.875rem;
+    background-image: url("../../../../public/shared/desktop/bg-pattern-leaf.svg");
+    background-position: 0 7.875rem;
+    background-repeat: no-repeat;
+
+    @include tablet{
+        padding: 0 0 24rem;
+    }
+
+    @include desktop{
+        padding: 0 0 23.75rem;
+    }
+
+    &__cards{
+        width: 87.2%;
+        margin: auto;
+        max-width: 69.4375rem;
+        margin-top: 6rem;
+
+        @include tablet{
+            width: 90%;
+            margin-top: 7rem;
+        }
+
+        @include desktop{
+            margin-top: 10rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1.875rem;
+        }
+    }
 }
