partial on about page mobile

--- a/src/app/about/page.module.scss
+++ b/src/app/about/page.module.scss
@@ -2,5 +2,10 @@
 @use "../../styles/variables" as *;
 
 .about{
+    position: relative;
     padding-bottom: 19.375rem;
+
+    @include tablet{
+        padding-bottom: 23.75rem;
+    }
 }
