--- a/src/ui/single-card/single-card.module.scss
+++ b/src/ui/single-card/single-card.module.scss
@@ -28,10 +28,10 @@
 
         &--light{
             background-color: #FDF3F0;
-            background-image: url("../../../public/shared/desktop/bg-pattern-small-circle.svg");
-            background-repeat: no-repeat;
-            background-size: 18.25rem 18.25rem;
-            background-position: right -9.125rem;
+            background-image: url("../../../public/shared/desktop/bg-pattern-three-circles.svg");
+            background-repeat: repeat;
+            background-size: 54.75rem 36.5rem;
+            background-position: left top;
             color: $peach;
             
         }
