--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -42,6 +42,16 @@ ul{
             color: $white;
         }
     }
+
+    &__light{
+        background-color: $peach;
+        color: #333136;
+
+        &:hover{
+            background-color: $light-peach;
+            color: $white;
+        }
+    }
 }
 
 address{
