--- a/src/app/about/page.module.scss
+++ b/src/app/about/page.module.scss
@@ -9,6 +9,26 @@
         padding-bottom: 23.75rem;
     }
 
+    @include desktop{
+        background-image: url("../../../public/shared/desktop/bg-pattern-leaf.svg");
+        background-repeat: no-repeat;
+        background-position: left 20rem;
+    
+        &::after{
+            content: "";
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            transform: rotateZ(180deg);
+            background-image: url("../../../public/shared/desktop/bg-pattern-leaf.svg");
+            top: 0;
+            background-repeat: no-repeat;
+            background-position: -24.75rem 48rem;
+            z-index: -1;
+        }
+    }
+
     &__countries{
         text-align: center;
         margin: 7.5rem 0;
