fix position of address on footer at mobile

--- a/src/ui/footer/footer.module.scss
+++ b/src/ui/footer/footer.module.scss
@@ -94,4 +94,11 @@
             align-items: flex-end;
         }
     }
+
+    &__address{
+
+        @include tablet{
+            text-align: left;
+        }
+    }
 }
