--- a/src/ui/call-to-action/call-to-action.module.scss
+++ b/src/ui/call-to-action/call-to-action.module.scss
@@ -10,7 +10,7 @@
     color: $white;
     text-align: center;
     position: absolute;
-    bottom: -11.875rem;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     background-image: url("../../../public/shared/desktop/bg-pattern-call-to-action.svg");
@@ -21,7 +21,6 @@
 
     @include tablet{
         width: 90%;
-        bottom: -5.375rem;
         padding: 3.5625rem 0;
         background-position: clamp(0rem, -18.071rem + 37.649vi, 15.813rem) center;
     }
@@ -30,7 +29,6 @@
         width: 69.4375rem;
         padding: 4.5rem 5.9375rem;
         text-align: left;
-        bottom: -4.5rem;
     }
 
     &__header{
@@ -75,5 +73,19 @@
             transform: translateY(-100%);
             right: 6rem;
         }
+    }
+}
+
+.container{
+    background-color: $black;
+    height: 11.8125rem;
+    position: relative;
+
+    @include tablet{
+        height: 5.375rem;
+    }
+
+    @include desktop{
+        height: 4.5rem;
     }
 }
