--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -57,3 +57,46 @@ ul{
 address{
     font-style: normal;
 }
+
+.field{
+    position: relative;
+    padding-top: 2px;
+
+    &__label{
+        @include body-1;
+        position: absolute;
+        bottom: 0.75rem;
+        left: 1.5rem;
+        opacity: 0.5;
+
+        &--hide{
+            visibility: hidden;
+        }
+
+        &--textarea{
+            top: 0;
+        }
+    }
+
+    &__input{
+        @include body-1;
+        background-color: inherit;
+        border: none;
+        width: 100%;
+        border-bottom: 1px solid $white;
+        caret-color: $white;
+        padding: 0 0 0.75rem 1.5rem;
+        color: $white;
+        position: relative;
+        top: -1px;
+
+        &:focus{
+            outline:none;
+            border-bottom: 2px solid $white;
+        }
+
+        &--textarea{
+            min-height: 6.3125rem;
+        }
+    }
+}
