--- a/src/ui/details-form/details-form.module.scss
+++ b/src/ui/details-form/details-form.module.scss
@@ -5,6 +5,7 @@
     background-color:inherit;
     margin: 3rem auto 0;
     width: 87.2%;
+    background: transparent;
 
     &__submit{
         @include body-1;
