--- a/src/app/locations/page.module.scss
+++ b/src/app/locations/page.module.scss
@@ -2,5 +2,17 @@
 @use "../../styles/variables" as *;
 
 .locations{
-    padding: 10rem;
+    padding-bottom: 19.375rem;
+
+    @include tablet{
+        padding-bottom: 24rem;
+    }
+
+    @include desktop{
+        padding-bottom: 10rem;
+    }
+}
+
+.card{
+    margin-top: 2.5rem;
 }
