--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin mid-mobile{
+    @media screen and (min-width: 689px) {
+        @content;
+    }
+}
+
 @mixin tablet{
     @media screen and (min-width: 768px) {
         @content;
